--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <strong>Introduction</strong>
+    <strong>Privacy Policy</strong>
     <p>
         Mizo Blood Donor App hi Mizoram chhunga Thisen mamawhtute leh thisen pe duhtute awlsam zawka an inzawn hmuh
         theih nana siam a ni a.
