--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     <ol type="1">
         <li>Mizo Blood Donor App I install chuan Privacy Policy hi I pawm tihna a ni.</li>
         <li>Privacy Policy hi tihdanglam theih a ni a.</li>
-        <li>He Application chhunga Information kan tarlan te hi hman sual emaw hman khawloh a nih chuan Application
+        <li>He Application chhunga Information kan tarlan te hi hman sual emaw hman khawloh emaw a nih chuan Application
             siamtuten mawh kan phur lovang.</li>
     </ol>
     <p><strong>Personal Information kan lakkhawm leh tarlan te</strong></p>
     <p>
-        Blood Donor ni tura in register bik te tan heng a hnuaia Personal Information kan tarlan te hi an phalna ngeia
-        lakkhawm ani.
+        Blood Donor ni tura in registerbik te tan heng a hnuaia Personal Information kan tarlan te hi an phalna ngeia
+        lakkhawm a ni.
     </p>
     <ul>
         <li>Google Account (gmail ID, Username, leh Profile Picture)</li>
@@ -50,7 +50,7 @@
 
     <strong>Third-Party Services</strong>
     <p>
-        He App hian Personal Information lak khawm nan leh tangkai zawka a hmangtu ten an hman theihnan heng a
+        He App hian Personal Information lak khawm nan leh tangkai zawka a hmangtute'n an hman theihnan heng
         Third-Party Services-te hi a hmang a,
         An Privacy Policy te chu a hnuaia tarlan ang hi ani:
     </p>
@@ -62,6 +62,8 @@
     </ul>
     <p><strong>Log Data</strong></p>
     <p>
+        He App hi tluang taka hman a nih theih kan duh a, Error a awm palh pawha Error awm chhan kan hriat theih nan Third Party Services hmangin i phone Log  Data atangin
+        heng- i phone IP Address, phone hming, Operating System version, i phone i set dan, he app i hman tan hun leh thil dangte kan la khawm.
         We want to inform you that whenever you
         use our Service, in a case of an error in the app
         we collect data and information (through third party
@@ -76,25 +78,23 @@
     <p><strong>Security</strong></p>
     <p>
         I Personal Information min pek hi kan ngaihlu hle a, a theihna chinah vawnhimsak zel che kan tum ang. Chutih
-        rualin
-        Internet kaltlanga Information kan share-te hi za-ah za (100%) in a him tawk lo thei tih kan hriat a tha.
+        rualin Internet kaltlanga Information kan share-te hi za-ah za (100%) in a him tawk lo thei tih kan hriat a tha.
 
     </p>
     <p><strong>Kum Bithliah</strong></p>
     <p>
         He App hi kum 18 hnuai lam tan hman a rem lovang. Kum 18 hnuai lamin an lo hmang tih hriat a nih chuan anmahni
-        hriattir
-        lovin an Account paihsak theih an ni.
+        hriattir lovin an Account paihsak theih an ni.
     </p>
     <p><strong>Privacy Policy tih danglam chungchang</strong></p>
     <p>
-        Kan Privacy Policy a tul anga thlak danglam theih ani a, Kan thlak anih chuan hriatir ini ang.
+        Kan Privacy Policy hi a tul anga thlak danglam theih a ni a, kan thlak a nih chuan hriatir i ni ang.
     </p>
-    <p>He Policy hi 01-10-2020 a hman tan ani.</p>
+    <p>He Policy hi 01-10-2020 a hman tan a ni.</p>
     <p><strong>Contact Us</strong></p>
     <p>
-        Kan Privacy Policy chungchang ah zawhna emaw thurawn a awm anih chuan <a
-            href="mailto: mizoblooddonor@gmail.com">mizoblooddonor@gmail.com</a> ah biak theih reng kanni.
+        Kan Privacy Policy chungchang ah zawhna emaw thurawn emaw a awm a nih chuan <a
+            href="mailto: mizoblooddonor@gmail.com">mizoblooddonor@gmail.com</a> ah biak theih reng kan ni.
     </p>
 
 </body>
